fixed figma width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -816,7 +816,7 @@ textarea {
 .figma {
   margin-bottom: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  width: 800px;
+  width: 100%;
   height: 550px;
 }
 
